--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MongoDB-Backend Express API with CI",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha /test",
     "start": "node ."
   },
   "keywords": [],
